--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
+    "vue-socket.io": "^3.0.7",
     "vuetify": "^1.5.16",
     "vuex": "^3.1.1"
   },
